// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AEM page should execute getServerSideProps with gb locale and a page query 1`] = `
{
  "props": {
    "data": {},
    "dehydratedState": {
      "mutations": [],
      "queries": [],
    },
    "error": {
      "message": "",
    },
    "featureToggles": {
      "testFeature": true,
    },
    "isError": false,
    "isLoading": false,
    "pageLayout": false,
  },
}
`;

exports[`AEM page should execute getServerSideProps with gb locale and no idTokenCookie 1`] = `
{
  "props": {
    "data": {},
    "dehydratedState": {
      "mutations": [],
      "queries": [],
    },
    "error": {
      "message": "",
    },
    "featureToggles": {
      "testFeature": true,
    },
    "isError": false,
    "isLoading": false,
    "pageLayout": false,
  },
}
`;

exports[`AEM page should match the snapshot with a given pageLayout 1`] = `
<div>
  <div
    data-testid="SearchContainer"
  />
  <div>
    www.google.com
  </div>
</div>
`;

exports[`AEM page should match the snapshot with pageLayout as false 1`] = `
<div>
  <div
    data-testid="SearchContainer"
  />
  Loading...
</div>
`;
